remove .obsidian/workspace.json from repo

--- a/daily/2024-05-19.md
+++ b/daily/2024-05-19.md
@@ -4,5 +4,5 @@
 	- [x] [[Сценарий дополнений про Nested Loops]]
 - [ ] [[Курс Хардкорная веб-разработка]] прочитай текущий материал 11 главы
 - [ ] [[Курс Хардкорная веб-разработка]] проработай снова [[Книга «Начинаем программировать на Python», 5 изд, Тони Гэддис]]
-- [ ] проверка заданий курса
+- [x] проверка заданий курса
 - [ ] ответь по боту на [[Курс Хардкорная веб-разработка]]
