--- a/daily/2024-05-21.md
+++ b/daily/2024-05-21.md
@@ -1,2 +1,4 @@
+- [x] проверка заданий курса
+- [x] комментарий о Makefile в LMS
+- [ ] снять-выложить видео по [[Сценарий дополнений про Nested Loops]]
 
-- [x] Продолжал исследования по [[Сценарий дополнений про Nested Loops]]
