--- a/Сценарий. Полная настройка Windows, WSL и инструментов для разработчика.md
+++ b/Сценарий. Полная настройка Windows, WSL и инструментов для разработчика.md
@@ -144,7 +144,7 @@ sudo apt install -y make build-essential libssl-dev zlib1g-dev libbz2-dev librea
 wget https://www.python.org/ftp/python/3.13.1/Python-3.13.1.tgz
 tar -xzfv Python-3.13.1.tgz
 cd Python-3.13.1
-./configure --enable-optimizations --prefix=/home/alexeygoloburdin/.python3.13
+./configure --enable-optimizations --prefix=$HOME/.python3.13
 make -j22
 sudo make altinstall
 
@@ -156,6 +156,8 @@ export NVM_DIR="$HOME/.nvm"
 nvm install 23
 node -v
 npm -v
+
+sudo chmod u+s /bin/ping
 
 npm i -g npm
 npm install -g typescript
@@ -189,13 +191,6 @@ npm install -g typescript-language-server
 
 # Install gopls
 go install golang.org/x/tools/gopls@latest
-
-# Install rust-analyzer
-# https://github.com/rust-lang/rust-analyzer/releases
-wget https://github.com/rust-lang/rust-analyzer/releases/download/2024-12-09/rust-analyzer-x86_64-unknown-linux-gnu.gz
-gunzip -d rust-analyzer-x86_64-unknown-linux-gnu.gz
-chmod +x rust-analyzer-x86_64-unknown-linux-gnu
-mv rust-analyzer-x86_64-unknown-linux-gnu ~/.local/bin/rust-analyzer
 
 # Packer for nvim
 mkdir -p ~/.local/share/nvim/site/pack/packer/start/
