Update Сценарий. Полная настройка Windows, WSL и инструментов для разработчика.md

--- a/Сценарий. Полная настройка Windows, WSL и инструментов для разработчика.md
+++ b/Сценарий. Полная настройка Windows, WSL и инструментов для разработчика.md
@@ -53,7 +53,8 @@
 
 ```bash
 wsl --install -d Debian
-wsl --set-default-version 2
+wsl -l -v
+wsl --set-version Debian 2
 ```
 
 # Настройка Git в WSL
