Update Сценарий. Полная настройка Windows, WSL и инструментов для разработчика.md

--- a/Сценарий. Полная настройка Windows, WSL и инструментов для разработчика.md
+++ b/Сценарий. Полная настройка Windows, WSL и инструментов для разработчика.md
@@ -147,7 +147,7 @@ echo "export EDITOR=vim" >> ~/.zshrc && . ~/.zshrc
 sudo apt install -y make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
 
 wget https://www.python.org/ftp/python/3.13.1/Python-3.13.1.tgz
-tar -xzfv Python-3.13.1.tgz
+tar -xzvf Python-3.13.1.tgz
 cd Python-3.13.1
 ./configure --enable-optimizations --prefix=$HOME/.python3.13
 make -j22
